--- a/src/app/BGC/component/bgc.componentview.html
+++ b/src/app/BGC/component/bgc.componentview.html
@@ -1,127 +1,76 @@
-<div *ngIf="assetDetails; else noassetTemplate" class="row">
-    <div class="col s12">
-        <div class="card  white">
-            <div class="card-content indigo-text text-darken-2">
-                <span class="card-title">
-                    Employee details
-                </span>
-                <hr>
-                <br>
-                <table class="highlight">
-                    <tbody>
-                        <tr>
-                            <td>
-                                Employee id:
-                            </td>
-                            <td>{{assetDetails.empployeeID}}</td>
-                            <td>Adhaar:</td>
-                            <td>{{assetDetails.aadhaar}}</td>
-
-                        </tr>
-                        <tr>
-                            <td>Name:</td>
-                            <td>{{assetDetails.firstName}} {{assetDetails.lastName}}</td>
-                            <td>Gender:</td>
-                            <td>{{assetDetails.gender}}</td>
-                        </tr>
-                        <tr>
-                            <td>Email:</td>
-                            <td>{{assetDetails.contactDetails.email}} </td>
-                            <td>Phone:</td>
-                            <td>{{assetDetails.contactDetails.mobilePhone}}</td>
-                        </tr>
-                        <tr>
-                            <td>DoB</td>
-                            <td>{{assetDetails.birthDetails.dateOfBirth}} </td>
-                            <td>Status</td>
-                            <td>{{assetDetails.status}} </td>
-                        </tr>
-                        <tr>
-                            <td>Employer</td>
-                            <td>{{assetDetails.employer}} </td>
-                        </tr>
-
-                    </tbody>
-                </table>
-
-            </div>
-
-        </div>
-        <div class="">
-            <a class="waves-effect waves-light btn" (click)="searchHistory()">history</a>
-
-            <button class="waves-effect waves-light btn " routerLink="/relEmp/{{assetId}}/{{assetDetails.employer}}/{{assetDetails.status}}">Release</button>
-            <button class="waves-effect waves-light btn " routerLink="/relEmp/{{assetId}}/{{assetDetails.employer}}/{{assetDetails.status}}">Onboard</button>
-
-        </div>
-    </div>
-    <div class="row"></div>
-    <div class="row"></div>
-
-</div>
+<head>
+    <title>Central Bank View</title>
+</head>
 <div class="row">
-    <div *ngIf="historyVisibility">
-
-
-        <div class=" teal accent-1">
-            <div class=" indigo-text text-darken-2">
-
-                <h5>
-                    Employment history (chained - blocks):
-                </h5>
-                <hr>
-
-
-            </div>
-        </div>
-
-        <div *ngFor="let AssetHistoryItem of assetHistory">
-            <div class="col s6">
-                <div class="card deep-purple lighten-5">
-                    <div class="card-content indigo-text text-darken-2">
-                        <span class="card-title">
-                            <span *ngIf="AssetHistoryItem.action=='EMPLOYED'">Employee onboarded</span>
-                            <span *ngIf="AssetHistoryItem.action=='RELEASED'">Employee released</span>
-                        </span>
-                        <table class="striped">
-                            <tr>
-                                <td>Employer:</td>
-                                <td>{{AssetHistoryItem.newEmployer}}</td>
-                            </tr>
-                            <tr>
-                                <td>Joining date:</td>
-                                <td>{{AssetHistoryItem.timestamp|slice:0:10}}</td>
-                            </tr>
-                            <tr>
-                                <td>Comments:</td>
-                                <td>{{AssetHistoryItem.comments}}</td>
-                            </tr>
-                            <tr>
-                                <td>Reason:</td>
-                                <td>{{AssetHistoryItem.reason}}</td>
-                            </tr>
-                        </table>
-                    </div>
-
-
+        
+          <div>
+            
+        
+            <table class="striped indigo-text text-darken-2">
+              <thead>
+                <tr>
+                  <th>App Id</th>
+                  <th>Customer</th>
+                  <th>Bank(BIC)</th>
+                  <th>Loan Amount</th>
+                  <th>Currency</th>
+                  <th>Status</th>
+                  <th>Comments</th>
+        
+        
+                </tr>
+              </thead>
+        
+              <tbody class="pagination">
+                <tr *ngFor="let loan of assetDetails" > 
+                  <td>{{loan.applId}}</td>
+                  <td>{{loan.customer|slice:32}}</td>
+                  <td>{{loan.bank|slice:28}}</td>
+                  <td>{{loan.loanAmnt}}</td>
+                  <td>{{loan.currency}}</td>
+                  <td>{{loan.status}}</td>
+                  <td>
+                        {{loan.comments}}
+                  </td>
+                </tr>
+        
+              </tbody>
+            </table>
+        
+        
+        
+        
+            <!--<div class="col s6">
+              <div class="card deep-purple lighten-5">
+                <div class="card-content indigo-text text-darken-2">
+                  <span class="card-title">
+                    <span *ngIf="loan.action=='EMPLOYED'">Employee onboarded</span>
+                    <span *ngIf="loan.action=='RELEASED'">Employee released</span>
+                  </span>
+                  <table class="striped">
+                    <tr>
+                      <td>Employer:</td>
+                      <td>{{AssetHistoryItem.newEmployer}}</td>
+                    </tr>
+                    <tr>
+                      <td>Joining date:</td>
+                      <td>{{AssetHistoryItem.timestamp|slice:0:10}}</td>
+                    </tr>
+                    <tr>
+                      <td>Comments:</td>
+                      <td>{{AssetHistoryItem.comments}}</td>
+                    </tr>
+                    <tr>
+                      <td>Reason:</td>
+                      <td>{{AssetHistoryItem.reason}}</td>
+                    </tr>
+                  </table>
                 </div>
-            </div>
-
-
+        
+        
+              </div>
+            </div>-->
+        
+        
+          </div>
         </div>
-    </div>
-
-</div>
-
-
-<ng-template #noassetTemplate>
-
-    <div class="col s12">
-        <div class="card  white">
-            <div class="card-content indigo-text text-darken-2">
-                Loading...
-
-            </div>
-        </div>
-    </div>
-</ng-template>
