--- a/src/app/BGC/component/dashboard.view.html
+++ b/src/app/BGC/component/dashboard.view.html
@@ -1,23 +1,69 @@
+
 <div class="row">
 
-  <div class="col s12">
-    <div class="card  white">
-      <div class="card-content indigo-text text-darken-2">
-        <span class="card-title">
-          Enter employee aadhaar no:
-        </span>
-        <div>
-          <span>
+  <div>
+    
 
-            <input type="text" [(ngModel)]="assetId">
+    <table class="striped indigo-text text-darken-2">
+      <thead>
+        <tr>
+          <th>App Id</th>
+          <th>Loan Amount</th>
+          <th>Currency</th>
+          <th>Status</th>
+
+
+        </tr>
+      </thead>
+
+      <tbody class="pagination">
+        <tr *ngFor="let loan of assetDetails" > 
+          <td>{{loan.applId}}</td>
+          <td>{{loan.loanAmnt}}</td>
+          <td>{{loan.currency}}</td>
+          <td>{{loan.status}}</td>
+          <td>
+            <a class="waves-effect waves-light btn indigo-text text-darken-2" (click)="submitAppl(loan)">Submit</a>
+          </td>
+        </tr>
+
+      </tbody>
+    </table>
+
+
+
+
+    <!--<div class="col s6">
+      <div class="card deep-purple lighten-5">
+        <div class="card-content indigo-text text-darken-2">
+          <span class="card-title">
+            <span *ngIf="loan.action=='EMPLOYED'">Employee onboarded</span>
+            <span *ngIf="loan.action=='RELEASED'">Employee released</span>
           </span>
-          <div class="right-align">Don't have one? Try with 2270055</div>
-          <br>
-          <button class="btn waves-effect waves-light pulse" routerLink="/searchAsset/{{assetId}}">Search
-          </button>
-
+          <table class="striped">
+            <tr>
+              <td>Employer:</td>
+              <td>{{AssetHistoryItem.newEmployer}}</td>
+            </tr>
+            <tr>
+              <td>Joining date:</td>
+              <td>{{AssetHistoryItem.timestamp|slice:0:10}}</td>
+            </tr>
+            <tr>
+              <td>Comments:</td>
+              <td>{{AssetHistoryItem.comments}}</td>
+            </tr>
+            <tr>
+              <td>Reason:</td>
+              <td>{{AssetHistoryItem.reason}}</td>
+            </tr>
+          </table>
         </div>
+
+
       </div>
-    </div>
+    </div>-->
+
+
   </div>
 </div>
