--- a/src/app/BGC/component/releseEmp.componentview.html
+++ b/src/app/BGC/component/releseEmp.componentview.html
@@ -13,14 +13,14 @@
                             <div class="col s6">
                                 <br>
                                 <div class="input-field inline">
-                                    <input id="reason" type="text" class="validate" [(ngModel)]="emp.reason">
+                                    <input id="reason" type="text" class="validate" >
                                     <label for="reason">*Reason</label>
                                 </div>
                             </div>
                             <div class="col s6">
                                 <br>
                                 <div class="input-field inline">
-                                    <input id="cmnts" type="text" class="validate" [(ngModel)]="emp.comments">
+                                    <input id="cmnts" type="text" class="validate" >
                                     <label for="cmnts">*Comments</label>
                                 </div>
                             </div>
@@ -30,15 +30,15 @@
                             <div class="col s6">
                                 <span>*Action</span>
                                 <p>
-                                    <input name="group1" type="radio" id="test1" (click)="emp.status='EMPLOYED'" />
+                                    <input name="group1" type="radio" id="test1"" />
                                     <label for="test1">Onboard</label>
                                 </p>
                                 <p>
-                                    <input name="group1" type="radio" id="test2" (click)="emp.status='RELEASED'" />
+                                    <input name="group1" type="radio" id="test2" " />
                                     <label for="test2">Release</label>
                                 </p>
                             </div>
-                            <div *ngIf="emp.status!='RELEASED'" class="col s6 indigo-text">
+                            <div *ngIf="1==1" class="col s6 indigo-text">
                                 <span>Employer</span>
                                 <p>
                                     <input name="group4" type="radio" id="test6" (click)="emp.employer='4321';emp.employerName='Google'" />
