--- a/src/app/BGC/component/welcome.componentview.html
+++ b/src/app/BGC/component/welcome.componentview.html
@@ -1,73 +1,58 @@
-<div class="row">
+<div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">Title</span>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" href="">Link</a>
+    </nav>
+  </div>
 
-  <div class="col s12">
+
+
+<!--div class="row">
+  <div class="col s3">
+    <div class="row">
+      <div class="col s12">
+        <div class="card white">
+          <div class="card-content indigo-text text-darken-2">
+            <span class="card-title"></span>
+            <p >
+                <a class="indigo-text text-darken-2" routerLink="/addParticipant">Register a borrower</a>
+                <br> <br>
+                <a class="indigo-text text-darken-2" routerLink="/addParticipant">Register a lender</a>
+                <br> <br>
+                <a class="indigo-text text-darken-2" routerLink="/searchEmp">Search contract/application</a> <br> <br>
+                <a class="indigo-text text-darken-2" routerLink="/searchEmp">Central bank view</a><br><br>
+                <a class="indigo-text text-darken-2" routerLink="/searchEmp">Wallet provider view</a>
+ 
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="col s9">
     <div class="card  white">
       <div class="card-content indigo-text text-darken-2">
 
         <div class="section no-pad-bot" id="index-banner">
           <div class="container">
             <br>
-            <h1 class="header center orange-text">BGC - Blockchain</h1>
+            <h4 class="header center orange-text">A Peer to Peer Lending Network</h4>
             <div class="row center">
-              <h5 class="header col s12 light">A candidate background check solution built on Hyperledger fabric</h5>
+              <h5 class="header col s12 light">A peer to peer lending solution built on Hyperledger fabric</h5>
             </div>
-            <div class="row center">
-              <!-- <a href="/" id="download-button" class="btn-large waves-effect waves-light orange">Learn More</a>-->
-            </div>
+           
 
           </div>
         </div>
 
 
-        <div class="container">
-          <div class="section">
 
-            <!--   Icon Section   -->
-            <div class="row">
-              <div class="col s12 m4">
-                <div class="icon-block">
-                  <h2 class="center light-blue-text">
-                    <i class="material-icons">search</i>
-                  </h2>
-                  <h5 class="center">
-                    <a href="/searchEmp">Find employment history</a>
-                  </h5>
-
-                  <p class="light">Perform pre-hiring background checks.Know about candidate legit employement history, shared and validated
-                    by previous employers.</p>
-                </div>
-              </div>
-
-              <div class="col s12 m4">
-                <div class="icon-block">
-                  <h2 class="center light-blue-text">
-                    <i class="material-icons">add_circle_outline</i>
-                  </h2>
-                  <h5 class="center">
-                    <a href="/addEmp">Onboard fresh graduates</a>
-                  </h5>
-
-                  <p class="light">Onboard grads on blockchain. View verified academics and scholary history.</p>
-                </div>
-              </div>
-
-              <div class="col s12 m4">
-                <div class="icon-block">
-                  <h2 class="center light-blue-text">
-                    <i class="material-icons">security</i>
-                  </h2>
-                  <h5 class="center">
-                    <a href="/guide">Security & integrity</a>
-                  </h5>
-
-                  <p class="light">Security and integrity is enforced by revolutionary blockchain technology. Hyperledger, a private blockchain
-                    is secured by design. Data quality is maintained by database replication and computational trust. </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
-</div>
+</div>-->
