--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,7 @@
         <!-- Navigation -->
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" routerLink="/addParticipant">Register customer</a>
-          <a class="mdl-navigation__link" routerLink="/regAsset">Search Contract</a>
+          <a class="mdl-navigation__link" routerLink="/search">Search Contract</a>
           <a class="mdl-navigation__link" href="">Central bank view</a>
           <a class="mdl-navigation__link" href="">Wallet provider view</a>
         </nav>
@@ -86,7 +86,7 @@
       <span class="mdl-layout-title">Title</span>
       <nav class="mdl-navigation">
           <a class="mdl-navigation__link" routerLink="/addParticipant">Register customer</a>
-          <a class="mdl-navigation__link" href="">Search Contract</a>
+          <a class="mdl-navigation__link" routerLink="/search">Search Contract</a>
           <a class="mdl-navigation__link" href="">Central bank view</a>
           <a class="mdl-navigation__link" href="">Wallet provider view</a>
         
