--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,17 +77,17 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" routerLink="/addParticipant">Register customer</a>
           <a class="mdl-navigation__link" routerLink="/search">Search Contract</a>
-          <a class="mdl-navigation__link" href="">Central bank view</a>
+          <a class="mdl-navigation__link" routerLink="/login">Central bank view</a>
           <a class="mdl-navigation__link" href="">Wallet provider view</a>
         </nav>
       </div>
     </header>
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Title</span>
+      <span class="mdl-layout-title">P2PLending</span>
       <nav class="mdl-navigation">
           <a class="mdl-navigation__link" routerLink="/addParticipant">Register customer</a>
           <a class="mdl-navigation__link" routerLink="/search">Search Contract</a>
-          <a class="mdl-navigation__link" href="">Central bank view</a>
+          <a class="mdl-navigation__link" routerLink="/login">Central bank view</a>
           <a class="mdl-navigation__link" href="">Wallet provider view</a>
         
       </nav>
@@ -97,35 +97,7 @@
         <router-outlet></router-outlet>
       </div>
       <footer class="mdl-mega-footer">
-       <!-- <div class="mdl-mega-footer--middle-section">
-       
 
-          <div class="mdl-mega-footer--drop-down-section">
-            <input class="mdl-mega-footer--heading-checkbox" type="checkbox" checked>
-            <h1 class="mdl-mega-footer--heading">Technology</h1>
-            <ul class="mdl-mega-footer--link-list">
-              <li>
-                <a href="#">How it works</a>
-              </li>
-             
-            </ul>
-          </div>
-          <div class="mdl-mega-footer--drop-down-section">
-            <input class="mdl-mega-footer--heading-checkbox" type="checkbox" checked>
-            <h1 class="mdl-mega-footer--heading">FAQ</h1>
-            <ul class="mdl-mega-footer--link-list">
-              <li>
-                <a href="#">Questions</a>
-              </li>
-              <li>
-                <a href="#">Answers</a>
-              </li>
-              <li>
-                <a href="#">Contact us</a>
-              </li>
-            </ul>
-          </div>
-        </div>-->
         <div class="mdl-mega-footer--bottom-section">
           <div class="mdl-logo">
             More Information
