--- a/src/app/BGC/component/welcome.componentview.html
+++ b/src/app/BGC/component/welcome.componentview.html
@@ -1,58 +1,39 @@
-<div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Title</span>
-    <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-    </nav>
-  </div>
+<div  class="mdl-grid">
+  <div class="mdl-cell mdl-cell--1-col"></div>
+  <div class="mdl-cell mdl-cell--11-col">
 
+    <style>
+      .demo-card-wide.mdl-card {
+        width: 95%;
+      }
 
+      .demo-card-wide>.mdl-card__title {}
 
-<!--div class="row">
-  <div class="col s3">
-    <div class="row">
-      <div class="col s12">
-        <div class="card white">
-          <div class="card-content indigo-text text-darken-2">
-            <span class="card-title"></span>
-            <p >
-                <a class="indigo-text text-darken-2" routerLink="/addParticipant">Register a borrower</a>
-                <br> <br>
-                <a class="indigo-text text-darken-2" routerLink="/addParticipant">Register a lender</a>
-                <br> <br>
-                <a class="indigo-text text-darken-2" routerLink="/searchEmp">Search contract/application</a> <br> <br>
-                <a class="indigo-text text-darken-2" routerLink="/searchEmp">Central bank view</a><br><br>
-                <a class="indigo-text text-darken-2" routerLink="/searchEmp">Wallet provider view</a>
- 
-            </p>
-          </div>
+      .demo-card-wide>.mdl-card__menu {
+        color: #fff;
+      }
 
-        </div>
-      </div>
-    </div>
+    </style>
 
-  </div>
-  <div class="col s9">
-    <div class="card  white">
-      <div class="card-content indigo-text text-darken-2">
-
-        <div class="section no-pad-bot" id="index-banner">
+    <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+      
+      <div class="mdl-card__supporting-text">
+        <div class="mdl-grid">
+          <div class="mdl-cell mdl-cell--1-col"></div>
           <div class="container">
             <br>
-            <h4 class="header center orange-text">A Peer to Peer Lending Network</h4>
+            <h4 class="header center orange-text">A Peer to Peer Lending Platform</h4>
             <div class="row center">
-              <h5 class="header col s12 light">A peer to peer lending solution built on Hyperledger fabric</h5>
+              <h5 class="header col s12 light">Built on Hyperledger fabric</h5>
             </div>
-           
+
 
           </div>
         </div>
 
-
-
       </div>
+
+
     </div>
   </div>
-</div>-->
+</div>
