--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,10 +75,10 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation -->
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" routerLink="/addParticipant">Register customer</a>
-          <a class="mdl-navigation__link" routerLink="/search">Search Contract</a>
-          <a class="mdl-navigation__link" routerLink="/login">Central bank view</a>
-          <a class="mdl-navigation__link" href="">Wallet provider view</a>
+          <a class="mdl-navigation__link" routerLink="/addParticipant">Register </a>
+          <a class="mdl-navigation__link" routerLink="/search">Search </a>
+          <a class="mdl-navigation__link" routerLink="/login" disbaled>Central bank </a>
+          <a class="mdl-navigation__link" href="">Wallet provider </a>
         </nav>
       </div>
     </header>
@@ -86,9 +86,9 @@
       <span class="mdl-layout-title">P2PLending</span>
       <nav class="mdl-navigation">
           <a class="mdl-navigation__link" routerLink="/addParticipant">Register customer</a>
-          <a class="mdl-navigation__link" routerLink="/search">Search Contract</a>
+          <a class="mdl-navigation__link" routerLink="/search">Search</a>
           <a class="mdl-navigation__link" routerLink="/login">Central bank view</a>
-          <a class="mdl-navigation__link" href="">Wallet provider view</a>
+          <a class="mdl-navigation__link diabled" href="" diable>Wallet provider view</a>
         
       </nav>
     </div>
