--- a/src/app/BGC/component/search.componentview.html
+++ b/src/app/BGC/component/search.componentview.html
@@ -5,7 +5,7 @@
   <div class="mdl-cell mdl-cell--5-col">
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
       <input class="mdl-textfield__input" type="text" id="key" [(ngModel)]="uid">
-      <label class="mdl-textfield__label" for="key">Idnetity No / Application No / Proposal No</label>{{this.globalVar}}
+      <label class="mdl-textfield__label" for="key">Idnetity No </label>
     </div>
   </div>
 </div>
